// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for PostRegistrationPaymentWidget Checking if it is rendering properly: Widget Renders 1`] = `
<div>
  <div
    class=""
  >
    <div
      class=""
      style="flex: 1 1 auto;"
    >
      <div>
        <div
          class=""
        >
          <h2
            class=""
          />
          <div
            class=""
            data-cvent-id="order-summary"
          >
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="1-panel"
                    aria-expanded="true"
                    id="1-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            dfsan indsfo 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="1-header"
                  class=""
                  id="1-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-HotelItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-HotelItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeHotelRoom__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="HotelItem-undefined"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-QuantityItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-QuantityItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeOptionalItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="QuantityItem-quantityItemId1"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="2-panel"
                    aria-expanded="true"
                    id="2-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            sam sam 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="2-header"
                  class=""
                  id="2-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_Subtotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1240
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="rightLineItemStyle"
            >
              <span
                class="additionalItemsText"
              >
                Event Registration
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                10
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_OrderTotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1250
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <h2
          class=""
        >
          Payment Header
        </h2>
        <div
          data-cvent-id="credit-card-webpayment-form"
        >
          <div
            id="payment-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests for PostRegistrationPaymentWidget doesnt shows the partial payment component if not enabled on payment widget 1`] = `
<div>
  <div
    class=""
  >
    <div
      class=""
      style="flex: 1 1 auto;"
    >
      <div>
        <div
          class=""
        >
          <h2
            class=""
          />
          <div
            class=""
            data-cvent-id="order-summary"
          >
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="7-panel"
                    aria-expanded="true"
                    id="7-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            dfsan indsfo 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="7-header"
                  class=""
                  id="7-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-HotelItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-HotelItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeHotelRoom__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="HotelItem-undefined"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-QuantityItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-QuantityItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeOptionalItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="QuantityItem-quantityItemId1"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="8-panel"
                    aria-expanded="true"
                    id="8-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            sam sam 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="8-header"
                  class=""
                  id="8-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_Subtotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1240
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="rightLineItemStyle"
            >
              <span
                class="additionalItemsText"
              >
                Event Registration
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                10
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_OrderTotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1250
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <h2
          class=""
        >
          Payment Header
        </h2>
        <div
          data-cvent-id="credit-card-webpayment-form"
        >
          <div
            id="payment-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests for PostRegistrationPaymentWidget doesnt shows the partial payment component if not enabled on post reg payment widget 1`] = `
<div>
  <div
    class=""
  >
    <div
      class=""
      style="flex: 1 1 auto;"
    >
      <div>
        <div
          class=""
        >
          <h2
            class=""
          />
          <div
            class=""
            data-cvent-id="order-summary"
          >
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="9-panel"
                    aria-expanded="true"
                    id="9-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            dfsan indsfo 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="9-header"
                  class=""
                  id="9-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-HotelItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-HotelItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeHotelRoom__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="HotelItem-undefined"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-QuantityItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-QuantityItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeOptionalItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="QuantityItem-quantityItemId1"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="10-panel"
                    aria-expanded="true"
                    id="10-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            sam sam 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="10-header"
                  class=""
                  id="10-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_Subtotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1240
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="rightLineItemStyle"
            >
              <span
                class="additionalItemsText"
              >
                Event Registration
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                10
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_OrderTotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1250
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <h2
          class=""
        >
          Payment Header
        </h2>
        <div
          data-cvent-id="credit-card-webpayment-form"
        >
          <div
            id="payment-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests for PostRegistrationPaymentWidget dont show the partial payment component if not in correct experiment 1`] = `
<div>
  <div
    class=""
  >
    <div
      class=""
      style="flex: 1 1 auto;"
    >
      <div>
        <div
          class=""
        >
          <h2
            class=""
          />
          <div
            class=""
            data-cvent-id="order-summary"
          >
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="5-panel"
                    aria-expanded="true"
                    id="5-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            dfsan indsfo 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="5-header"
                  class=""
                  id="5-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-HotelItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-HotelItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeHotelRoom__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="HotelItem-undefined"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-QuantityItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-QuantityItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeOptionalItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="QuantityItem-quantityItemId1"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="6-panel"
                    aria-expanded="true"
                    id="6-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            sam sam 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="6-header"
                  class=""
                  id="6-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_Subtotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1240
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="rightLineItemStyle"
            >
              <span
                class="additionalItemsText"
              >
                Event Registration
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                10
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_OrderTotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1250
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <h2
          class=""
        >
          Payment Header
        </h2>
        <div
          data-cvent-id="credit-card-webpayment-form"
        >
          <div
            id="payment-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests for PostRegistrationPaymentWidget payment is finalized: PostReg successful onComplete actions 1`] = `
Array [
  Object {
    "type": "event-guestside-site/postRegistrationPayment/FINALIZE_POSTREG_CHECKOUT_PENDING",
  },
  Object {
    "type": "event-guestside-site/CLEAR_ORDERS",
  },
  Object {
    "type": "nucleus-guestside-site/loading/SHOW_LOADING_DIALOG",
  },
  Object {
    "type": "nucleus-guestside-site/loading/HIDE_LOADING_DIALOG",
  },
  Object {
    "type": "event-guestside-site/postRegistrationPayment/FINALIZE_POSTREG_CHECKOUT_COMPLETE",
  },
]
`;

exports[`Tests for PostRegistrationPaymentWidget shows the partial payment component if it meets all requirements 1`] = `
<div>
  <div
    class=""
  >
    <div
      class=""
      style="flex: 1 1 auto;"
    >
      <div>
        <div
          class=""
        >
          <h2
            class=""
          />
          <div
            class=""
            data-cvent-id="order-summary"
          >
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="3-panel"
                    aria-expanded="true"
                    id="3-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            dfsan indsfo 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="3-header"
                  class=""
                  id="3-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-HotelItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-HotelItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeHotelRoom__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="HotelItem-undefined"
                          />
                        </div>
                        <div
                          class=""
                          data-cvent-id="order-summary-details-QuantityItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-QuantityItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeOptionalItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="QuantityItem-quantityItemId1"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                class=""
              >
                <div
                  aria-level="4"
                  role="heading"
                >
                  <div
                    aria-controls="4-panel"
                    aria-expanded="true"
                    id="4-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <div
                          class=""
                        >
                          <div
                            class=""
                          >
                            sam sam 
                          </div>
                          <div
                            class=""
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="4-header"
                  class=""
                  id="4-panel"
                  role="region"
                  style="visibility: visible;"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="orderSummary"
                        data-cvent-id="order-summary-details-container"
                      >
                        <div
                          class=""
                          data-cvent-id="order-summary-details-AdmissionItem"
                        >
                          <div
                            class=""
                          >
                            <div
                              class=""
                              data-cvent-id="order-summary-details-AdmissionItem-name"
                            >
                              EventWidgets_PaymentWidget_ProductTypeAdmissionItem__resx
                            </div>
                          </div>
                          <div
                            data-cvent-id="AdmissionItem-42a2e2c7-7a4c-4e07-8865-5a5a19709d19"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_Subtotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1240
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="rightLineItemStyle"
            >
              <span
                class="additionalItemsText"
              >
                Event Registration
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                10
              </span>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="leftLineItemStyle"
            >
              <span>
                EventWidgets_PaymentWidget_OrderTotal__resx
              </span>
            </div>
            <div
              class="totalAmount"
            >
              <span
                class=""
              >
                1250
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <h2
          class=""
        >
          Payment Header
        </h2>
        <div>
          <div
            class=""
            data-cvent-id="partial-payment-method-container"
          >
            <div
              class=""
              data-cvent-id="partial-payment-method-list"
            >
              <fieldset
                class=""
              >
                <legend
                  class=""
                  for="partialPaymentMethods"
                >
                  <span
                    class=""
                  >
                    <span
                      data-cvent-id="label"
                    />
                  </span>
                </legend>
                <div
                  class=""
                >
                  <ul
                    class=""
                    data-cvent-id="input"
                    id="partialPaymentMethods"
                  >
                    <li
                      class=""
                      data-cvent-id="option-partialPaymentMethods_0"
                    >
                      <input
                        checked=true
                        checked=""
                        class=""
                        id="partialPaymentMethods_0"
                        name="partialPaymentMethods"
                        type="radio"
                        value="0"
                      />
                      <label
                        for="partialPaymentMethods_0"
                      >
                        EventWidgets_PartialPaymentWidget_FullPaymentOption__resx
                      </label>
                    </li>
                    <li
                      class=""
                      data-cvent-id="option-partialPaymentMethods_1"
                    >
                      <input
                        class=""
                        id="partialPaymentMethods_1"
                        name="partialPaymentMethods"
                        type="radio"
                        value="1"
                      />
                      <label
                        for="partialPaymentMethods_1"
                      >
                        EventWidgets_PartialPaymentWidget_PartialPaymentOption__resx
                      </label>
                    </li>
                  </ul>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          data-cvent-id="credit-card-webpayment-form"
        >
          <div
            id="payment-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
